--- a/Navigations/Paginas/Citas/AgendarCitaPage.xaml
+++ b/Navigations/Paginas/Citas/AgendarCitaPage.xaml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Navigations.Paginas.RealiarCitasPage"
+             x:Class="Navigations.Paginas.AgendarCitaPage"
              Title="App CITAS">
     <VerticalStackLayout
         Padding="30,0"
         Spacing="30">
         
         <Label Text="Fecha" VerticalOptions="Center"/>
-        <Entry x:Name="EntryFecha" Placeholder="Campo de texto"/>
+    <!--    <Entry x:Name="EntryFecha" Placeholder="Campo de texto"/> -->
+
+        <DatePicker x:Name="DatePickeFecha"/>
 
         <Picker x:Name="picker"
           Title="Especialidad">
